--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Recipe Book</h1>
+    <p><a href="/home/ironcladcow/repos/odin-recipes/recipes/apple.html">Ithaca Apple Bread</a> </p>
+    <p><a href="/home/ironcladcow/repos/odin-recipes/recipes/avo.html">Avocado Toast with Fried Egg</a> </p>
+    <p><a href="/home/ironcladcow/repos/odin-recipes/recipes/steak.html">Balsamic Marinated Flank Steak</a> </p>
 </body>
 </html>
